# snakekit

./: .flake8  README.md  pixi.toml  pyproject.toml
src/snakekit/: __init__.py  metadata.py  util.py  version.py
src/snakekit/logging/: __init__.py  events.py  models.py  parse.py  plugin.py
src/snakemake_logger_plugin_snakekit/: __init__.py
tests/logging/: conftest.py  test_events.py  test_models.py
